--- a/next/query_page/templates/query_page.html
+++ b/next/query_page/templates/query_page.html
@@ -4,12 +4,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>NEXT - {{exp_uid}}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="{{ url_for('query_page.static', filename='js/next_widget.js' )}}"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   </head>
+  <style>
+    body {
+      background-color: #f8f8f8;
+    }
+    #directions_text {
+      font-family: 'Lato', Arial, sans-serif;
+      font-weight: 400;
+      line-height: 1.1;
+      color: #333;
+      font-size: xxx-large;
+    }
+    .row#top_instructions {
+      margin-top: 20px;
+    }
+  </style>
   <body>
-    
+
     <script>
       $(window).load(function() {
         // Set a timeout...and hide address bar
@@ -34,7 +50,7 @@
         </div>
       </div>
     </div>
-    
+
     <div class="container" style="height:90%">
       <!-- instructions at top of page -->
       <div id="top_instructions" class="row" >
@@ -85,11 +101,11 @@
             $('#debrief').modal('show');
           }
         },
-	  
+
         getQuery_success: function(){
           console.log("successfully got a query")
         },
-	  
+
         widget_failure: function(){
           $('#query').hide();
           $('#debrief').show();
